--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 	body{width: 100%;}
+	h4{margin-top:0px}
 	article{margin-top: -20px;}
 	.margin-left-20{margin-left: 20px;}
 	.reg,.login{padding: 0 7px;color:white;}
